--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body  {
     font-family: "Open Sans",sans-serif;
     color: #012346;
     font-size: 17px;
+    background-color: white;
 }
 
 #mainNav div {
@@ -329,8 +330,6 @@ body  {
 
 #topTrial{
     border-bottom: 1px solid #E6E6E6;
-    border-bottom: 1px solid #E6E6E6;
-    border-bottom: 1px solid #E6E6E6;
     display: block;
     flex-direction: column;
     color: #131543;
@@ -344,4 +343,537 @@ body  {
     align-items: center;
     justify-content: center;
     align-content: center;
+}
+
+#typesOfAccidents {
+    height: 150vh;
+    width: 100%;
+    background: #EFEFEF;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    gap: 50px;
+    
+    
+ 
+
+}
+
+#typesHeader {
+    height: 15%;
+    max-height: 20%;
+    width: 80%;
+    margin-top: 100px;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    display: flex;
+    margin-bottom: 50px;
+    padding: 10px;
+
+}
+
+#left {
+    height: 100%;
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+    align-items: start;
+    flex-direction: column;
+    padding: 10px;
+    
+
+
+}
+
+#left p {
+    line-height: 2em;
+    font-size: 1.2em ;
+}
+
+#rightCollect {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+   
+
+    
+}
+
+#right {
+    height: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    margin-left: 100px;
+    letter-spacing: .2em;
+    
+    
+    
+
+}
+
+#car {
+    height: 30%;
+    width: 80%;
+    background: white;
+    border-bottom: 1px solid #E6E6E6;
+    display: flex;
+}
+
+#carLeft {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    position: relative;
+    
+    
+
+
+}
+#leftcol {
+    height: 100%;
+    width: 40%;
+    background: linear-gradient(135deg, #ff9462 0%, #ff5601 100%);
+    position: absolute;
+    display: block;
+    z-index: 1;
+    left: 0;
+}
+
+#leftcol img {
+    z-index: 10;
+    display: block;
+    position: absolute;
+
+}
+
+#carRight{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+
+}
+
+#carRight p{
+    line-height: 2em;
+    padding-right: 20px;
+    font-size: 1.10em;
+
+}
+
+#truck {
+    height: 30%;
+    width: 80%;
+    background: white;
+    border-bottom: 1px solid #E6E6E6;
+    display: flex;
+}
+
+#truckLeft {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    position: relative;
+    
+    
+
+
+}
+
+#truckRight{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+
+}
+
+#truckRight p{
+    line-height: 2em;
+    padding-right: 20px;
+    font-size: 1.10em;
+
+}
+
+#additionalCases {
+    height: 40vh;
+    width: 100%;
+    background: #EFEFEF;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    gap: 50px;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+
+}
+
+#additionalCase {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    gap: 30px;
+
+}
+
+#left-addt {
+    height: 100%;
+    width: 65%;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    padding: 10px;
+    letter-spacing: 5px;
+
+
+}
+
+#right-addt {
+
+    height: 100%;
+    width: 40%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    letter-spacing: .2em;
+
+}
+
+#motorcycleAccident{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    height: 100px;
+    width: 100%;
+    border-bottom: 1px solid #abb8c3;
+}
+
+#bicycleAccidents{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    height: 100px;
+    width: 100%;
+    border-bottom: 1px solid #abb8c3;
+}
+
+#pedestrianAccidents{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    height: 100px;
+    width: 100%;
+}
+
+#content-Container {
+    height: 10vh;
+    width: 100%;
+    background: #EFEFEF;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    gap: 50px;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    padding-top: 50px;
+    
+}
+
+#Other-practice-areas{
+
+    height: auto;
+    width: 100%;
+    background: #EFEFEF;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    gap: 50px;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    
+
+}
+
+.add-practice {
+    width: 80%;
+    height: auto;
+    display: flex;
+    gap: 30px;
+    border-bottom: 1px solid #abb8c3;
+    padding-bottom: 50px;
+    
+
+}
+
+#left-side {
+    height: 100%;
+    width: 30%;
+    display: flex;
+    justify-content: start;
+    align-items: end;
+    flex-direction: column;
+    
+
+}
+
+a {
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+  }
+
+  #right-side {
+    height: 100%;
+    width: 70%;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    align-content: start;
+    flex-direction: column;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    letter-spacing: .2em;
+    line-height: 1.8em;
+    font-weight: 400;
+    
+
+  }
+
+  #click-box {
+    height: 50px;
+    width:auto;
+    padding: 10px 10px 10px 10px;
+    background: linear-gradient(135deg, #ff9462 0%, #ff5601 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .caseprocess {
+
+    height: 50%;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 20px 20px 20px;
+    line-height: 1.5em;
+    font-size: 1.2em;
+    
+   
+  }
+
+  #process{
+
+    height: auto;
+    width: 100%;
+    background: #EFEFEF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    flex-wrap: wrap;
+    
+
+}
+
+.main-align {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+
+}
+
+.icon {
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background: linear-gradient(135deg, #ff9462 0%, #ff5601 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.container{
+
+    height: 50vh;
+    width: 100%;
+    background: #EFEFEF;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    gap: 50px;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+}
+
+
+#whoWeAre {
+    height: 70vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    padding-top: 50px;
+    background: #EFEFEF;
+    
+
+
+}
+
+#whoWeAre p{
+    line-height: 1.5em;
+    font-weight: 300;
+
+
+}
+
+.align {
+    width: 80%;
+ 
+    height: 100%;
+    display: flex;
+}
+
+.left-column {
+    height: 100%;
+    width: 50%;
+    margin-right: 100px;
+    
+}
+
+.left-column h4{
+    line-height: 2em;
+    font-size: 1.5em;
+    font-weight: 100;
+    
+    
+    
+}
+
+.right-column {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    align-content: start;
+    flex-wrap: wrap;
+    
+}
+
+.head {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    justify-content: start;
+    position: relative;
+    color: #ff5601;
+
+}
+
+.dash {
+    
+    height: 2px;
+    width: 20px;
+    background-color: #ff5601;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#introRight {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    gap: 2px;
+    border-bottom: 2px solid #EFEFEF;
+    
+
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: white;
+    height: 100%;
+    width:50%
+}
+
+#bottomRight {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    gap: 2px;
+    border-bottom: #E6E6E6;
+
+}
+
+#girl img {
+    height:100%;
+    width:100%;
+    
+}
+
+#girl {
+    position: relative;
+}
+
+#totalHelped {
+    height: auto;
+    width: 100px;
+    text-align: center;
+    position: absolute;
+    left: 0;
 }
