--- a/style.css
+++ b/style.css
@@ -568,7 +568,7 @@ body  {
     flex-direction: column;
     font-family: "Open Sans",sans-serif;
     color: #012346;
-    letter-spacing: .2em;
+    letter-spacing: .10em;
 
 }
 
@@ -669,7 +669,7 @@ a {
     flex-direction: column;
     font-family: "Open Sans",sans-serif;
     color: #012346;
-    letter-spacing: .2em;
+    letter-spacing: .10em;
     line-height: 1.8em;
     font-weight: 400;
     
@@ -1085,4 +1085,270 @@ a {
 .cardtwo img {
     height: 95%;
     width: auto;
+}
+
+#reviewCallOut {
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    background: #EFEFEF;
+    padding-bottom: 50px;
+    padding-top: 150px;
+
+}
+
+#reviewCallOut p {
+    line-height: 1.5em;
+    font-size: 1.5em;
+    font-weight: 100;
+    margin-top: 0px;
+    margin-top: 20px;
+}
+
+#reviewCallOut img {
+    display: inline-block;
+}
+.left-column-review {
+    height: 100%;
+    width: 50%;
+    margin-right: 100px;
+    background-color: #012346;
+    color: white;
+    border-top-right-radius: 80px 80px;
+    border-bottom-right-radius: 80px 80px;
+    padding: 50px 50px 50px 50px;
+    
+    
+}
+
+.alignReview {
+    width: 80%;
+    height: 100%;
+    display: flex;
+}
+
+.right-columnReview {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    align-content: start;
+    flex-wrap: wrap;
+    
+   
+
+}
+
+#starCollectionCall {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 7px;
+    flex-direction: row-reverse;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+    align-content:center;
+   
+
+}
+#starCollectionCall img {
+    width: 10%;
+
+}
+
+#reviewLeftText {
+    width: 30%;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    margin-top: 20px;
+    font-weight: 700;
+    font-size: 22px;
+    gap: 10px;
+}
+
+#cta {
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    padding-top: 100px;
+    background: #EFEFEF;
+    padding-bottom: 150px;
+  
+
+}
+
+#subRecommnd {
+    width: 100%;
+    text-align: center;
+ 
+}
+
+#fullWidthConsultReview {
+    height: 50px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    background: linear-gradient(135deg, #ff9462 0%, #ff5601 100%);
+    font-family: "Open Sans",sans-serif;
+    letter-spacing: 1.5px;
+    padding: 10px 10px 10px 10px;
+    margin-top: 20px;
+}
+
+#beSomeone {
+    height: 50vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Open Sans",sans-serif;
+    color: white;
+    padding-top: 150px;
+    background: #012346;
+    padding-bottom: 150px;
+    font-size: 1.75em;
+    line-height: 1.5em;
+
+}
+
+#whereBlurb{
+    width: 80%;
+    height: auto;
+    border-top-left-radius: 80px 80px;
+    border-bottom-left-radius: 80px 80px;
+    color:#012346;
+    background-color: white;
+    padding: 20px 40px 20px 40px;
+
+
+}
+
+#whereBlurb h2{
+    font-size: 1em;
+  
+
+}
+
+#whereBlurb p{
+    font-size: .6em;
+  
+
+}
+
+#freeConsultationContainer{
+    height: auto;
+    width: 100%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    font-family: "Open Sans",sans-serif;
+    color: white;
+    padding-top: 150px;
+    background: linear-gradient(135deg, #ff9462 0%, #ff5601 100%);
+    padding-bottom: 150px;
+    font-size: 1.75em;
+    line-height: 1.5em;
+
+}
+
+
+
+#contactForm {
+
+    width: 80%;
+    height: 100%;
+    border-radius: 20px 20px;
+    color:#012346;
+    background-color: white;
+    padding: 20px 40px 20px 40px;
+    display: flex;
+    flex-direction: column;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+
+}
+
+#contactForm form {
+
+    display: inline-block;
+    align-items: start;
+    justify-content: center;
+    gap: 20px;
+    align-content: space-around;
+    flex-direction: column;
+    font-size: .8em;
+    
+   
+    
+
+}
+
+#contactForm label {
+    display: inline-block;
+    width: 100%;
+
+}
+
+#contactForm input {
+    display: inline-block;
+    width: 80%;
+  
+    
+}
+
+.inputLabel {
+    border-bottom: 1px solid black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    height: 25px;
+    margin-top: 0px;
+    cursor: pointer;
+    
+}
+
+
+
+#submitFormButton {
+    height: 50px;
+    width: 80%;
+    padding: 5px 5px 5px 5px;
+    color: white;
+    background: linear-gradient(135deg, #ff9462 0%, #ff5601 100%);
+    border: none;
+    margin-top: 20px;
+    cursor: pointer;
+    margin-bottom: 50px;
+    
+    
+}
+
+#freeconsultlogoimage {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+
 }
