--- a/style.css
+++ b/style.css
@@ -1352,3 +1352,63 @@ a {
     left: 50px;
 
 }
+#personalInjuryProcess {
+    height: 50vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    padding-top: 50px;
+    background: #EFEFEF;
+    padding-top: 150px;
+
+}
+
+#whatToExpectCard {
+    width: 100%;
+    height: 80%;
+    background-color: white;
+    display: flex;
+    border-radius: 25px 25px;
+}
+#whatToExpectLeft {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+ 
+}
+
+#whatToExpectRight {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    line-height: 1.7em;
+    padding: 20px 20px 20px 20px;
+    font-family: "Open Sans",sans-serif;
+    color: #012346;
+    
+ 
+}
+
+#whatToExpectRight h1 {
+  
+    line-height: 1.4em;
+
+ 
+}
+
+#whatToExpectLeft img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 1px solid white;
+    margin-top: 20px;
+}
